# ci_mpm

./: .flake8  environment.yml  pyproject.toml
.github/workflows/: flake8.yml  pytest-unit-tests.yml
simple_functions/: constants.py  functions1.py
simple_functions.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_simple_functions.py
